Date: 2025-05-09
  Features:
    - Added vulcanic rocks
    - Added new melting recipes from lava
    - Added new casting recipes
  Changes:
    - Updated existing melting and casting recipes
    - Removed low density structure, concrete and pipe to ground casting recipes
    - Kovarex enrichment does not need space science to be unlocked
    - Agricultural science does not spoil any more. Noice
---------------------------------------------------------------------------------------------------
Version: 0.3.13
Date: 2025-05-02
  Features:
    - Added water freezing recipe
    - Added new items, recipes and technologies after unlocking computer science pack
  Changes:
    - Changed recipes for recipes in cryogenic tech branch
    - Breeder reactor now requires fluoroketone for creating isotopes
    - Antimony processing revamped and it is now unlocked after cryogenic science pack
    - Updated some recipes related to rocket engine
    - Modified some recipes for some electronics related intermediates
    - Renamed glass fiber to optic fiber (you will have to select again from crafting menu on machine "optic fiber")
  Bugfixes:
    - Icons of nuclear fuel rods were not shown correctly
---------------------------------------------------------------------------------------------------
Version: 0.3.12
Date: 2025-04-25
  Features:
    - Added many nuclear isotopes with decay chains (spoiling :3)
    - Added thorium fuel and MOX fuel
  Changes:
    - Changed covarex enrichment
    - Better visibility for arrows in some recipe icons
  Bugfixes:
    - Fixed sulfur dioxide recipe
    - Fixed some buildings with different fluid inputs
    - Diamond recipe was uncorrectly producing alumina as byproduct
---------------------------------------------------------------------------------------------------
Version: 0.3.11
Date: 2025-04-18
  Features:
    - Added gas power station
    - Added japanese localization thanks to Snow Note
  Changes:
    - Updated some building icons