@@ -243,12 +243,12 @@ TODO for 0.3.15
     - Consider certain vulcanic rocks only to come from lava or hot-lava
   - Change lightning collectors to power poles
     - For some casting recipes from lava add as byproduct lava rocks like:
-    + Andesite: Si, Al, Fe, Mg, Ca, Na, K
-    + Basalt: Si, Al, Fe, Mg, Ca, Na
-    + Obsidian: Si, Al, Fe, Mg
-    + Pumice: Si, Al, K, Na, Fe, Mg
-    + Rhyolite: Si, Al, K, Na
-    + Scoria: Si, Al, Fe, Mg, Ca
+    + Andesite: 60% Si, 20% Al, 6% Fe, 3% Mg, 6% Ca, 3% Na, 2% K - Rb, Ba, U, Th, Nb, La, Eu
+    + Basalt: 50% Si, 15% Al, 12% Fe, 7% Mg, 10% Ca, 4% Na, 2% Ti - La, Nd, Y, Hf
+    + Obsidian: 75% Si, 18% Al, 1% Fe, 1% Mg, 5% K - Zr, U, Th, La, Nd, Y, Hf
+    + Pumice: 70% Si, 15% Al, 5% K, 5% Na, 3% Fe, 2% Mg - La, Ce, Nd, B, Li, V
+    + Rhyolite: 80% Si, 10% Al, 8% K, 2% Na - Y, Nd, Ce, Dy, Nb, Rb, Th, U
+    + Scoria: 50% Si, 20% Al, 15% Fe, 6% Mg, 9% Ca - La, Ce, Nd
   - Add casting recipes
     - potassium
       - melt from lava
