@@ -2306,6 +2306,7 @@ sp-utility-science-pack=Utility science pack
 sp-vanadium-alloys=Vanadium alloys
 sp-vanadium-processing=Vanadium processing
 sp-vinyl-chloride=Vinyl chloride
+sp-voltage-regulator-module=Voltage regulator module
 sp-weapon-shooting-speed=Weapon shooting speed
 sp-worker-robots-storage=Worker robots storage
 sp-yemnuth-explorer=Yemnuth explorer
