@@ -10,6 +10,8 @@ Date: 2025-05-09
     - Removed low density structure, concrete and pipe to ground casting recipes
     - Kovarex enrichment does not need space science to be unlocked
     - Agricultural science does not spoil any more. Noice
+  Bugfixes:
+    - Reverted some parts of the computers science branch. This technologies will be unlocked in a later stage of the game
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.13
 Date: 2025-05-02
